Bug 1537689 - Fix HTML output element default value is absent; r=emilio DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D24759